{
    "name": "InputActions",
    "maps": [
        {
            "name": "GunMap",
            "id": "654696e4-90d1-42f8-a38c-4e7be0abc088",
            "actions": [
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "2c078c80-66bb-4a3e-879e-0d52b9b9e39a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "2b6129ca-eac0-48ce-830a-1bf178140953",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4efe4c9-da6e-45dc-b301-23cf439c1f3b",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3b972d7-d8f1-49ee-b52d-d900cfb57c60",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14d14cb9-210d-4819-b6e3-50bf7fc5d232",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "980f45e7-27fe-4e41-97dc-cdb0441ce258",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}